A simple in memory sign-up sheet

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,10 +21,10 @@
             </div>
             <br>
 
-            <form action="." method="POST">
+            <form action="/" method="POST">
                 <!--class="form-control mx-auto w-auto"-->
                 <div>
-                    <input autocomplete="off" autofocus name="username" class="form-control mx-auto w-auto" placeholder="Username" type="text">
+                    <input autocomplete="off" autofocus name="name" class="form-control mx-auto w-auto" placeholder="Username" type="text">
                 </div>
                 <!--<textarea class="form-control" name="name" placeholder="Enter your name"></textarea>-->
                 <br>
