--- a/templates/index.html
+++ b/templates/index.html
@@ -21,34 +21,27 @@
                     <tr>
                         <th>Event Date</th>
                         <th>Name</th>
-                        <th>Sign up/Cancel time</th>
+                        <th>Sign up / Withdraw time</th>
                     </tr>
                 </thead>
                 <tbody>
-                    {% for row in rows %}
+                    {% for row in rows_signup %}
                         <tr>
                             <td>{{ row.date }}</td>
-                            {% if row.cancel == 0 %}
-                                <td>{{ row.name }}</td>
-                            {% else %}
-                                <td><s>{{ row.name }}<s></td>
-                            {% endif%}
+                            <td>{{ row.name }}</td>
+                            <td>{{ row.ts }}</td>
+                        </tr>
+                    {% endfor%}
+
+                    {% for row in rows_withdraw %}
+                        <tr>
+                            <td>{{ row.date }}</td>
+                            <td><s>{{ row.name }}<s></td>
                             <td>{{ row.ts }}</td>
                         </tr>
                     {% endfor%}
                 </tbody>
             </table>
-
-
-
-            <!--<div>-->
-            <!--    {% for row in names %}-->
-            <!--        <div class = "text-center">-->
-            <!--            {{ row.name }}-->
-            <!--        </div>-->
-            <!--    {% endfor %}-->
-            <!--</div>-->
-            <!--<br>-->
 
             <form action="/" method="POST">
                 <!--class="form-control mx-auto w-auto"-->
