--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,18 @@
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <title>Secaucus Soccer</title>
+        <style>
+            .margin {
+                margin-left: 20px;
+                margin-right: 20px;
+                margin-top: 10px;
+                margin-bottom: 10px;
+            }
+        </style>
     </head>
     <body>
-        <div>
-            In winter, we play indoor soccer at <a href="https://www.sofive.com/locations/meadowlands">sofive</a>!
+        <div class = "margin">
+            We are a group of people who love playing soccer. We organize indoor soccer events at <a href="https://www.sofive.com/locations/meadowlands">sofive</a> every week!
         </div>
 
         <ul>
@@ -16,9 +24,18 @@
             {% endfor %}
         </ul>
 
+        <form action="/" method="POST">
+            <input size = "27" autocomplete="off" autofocus name="event" class="margin form-control w-auto" placeholder="yyyy-mm-dd ?pm-?pm location" type="text">
+            <button type="submit" class="margin btn btn-success" name="create_event">Create event</button>
+        </form>
+
         {% if date != "" %}
         <div class = "text-center">
-            Soccer event on {{date}} at {{event_time}}. Please enter your wechat group alias below to sign up :
+            Event time: <b>{{date}}  {{event_time}}</b>
+            <br>
+            Event location: <b>{{event_location}}</b>
+            <br>
+            Please enter your wechat group alias below to sign up.
         </div>
 
         <div class="container py-5 text-center">
